<?xml version="1.0"?>
<package format="2">
  <name>bumblebee2_driver</name>
  <version>0.0.1</version>
  <description>ROS driver for PointGrey BumbleBee2 camera, using the Triclops SDK for rectification</description>

  <maintainer email="matthew.edwards@pg.canterbury.ac.nz">Matthew Edwards</maintainer>
  <license>GPLv3</license>
  <url type="website">https://github.com/mje-nz/ros_bb2_pg_driver</url>
  <author email="alexandre.coninx@isir.upmc.fr">Alexandre Coninx</author>
  <author email="matthew.edwards@pg.canterbury.ac.nz">Matthew Edwards</author>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>image_transport</depend>

</package>
